Created bone of server with JWTokens, that accepts DataBase, run quick tests via curl, server have some issues like no handling when user created new refresh token, old could be using too, etc. Will solve issues later. Created and architected DB, that will migrate to working directory later. Next step -> connect client with server

--- a/notiva/ios/Flutter/AppFrameworkInfo.plist
+++ b/notiva/ios/Flutter/AppFrameworkInfo.plist
@@ -21,7 +21,7 @@
   <key>CFBundleVersion</key>
   <string>1.0</string>
   <key>NSMicrophoneUsageDescription</key>
-  <string>To continue please give permission for using microphone</string>
+  <string>This app requires microphone access to record audio notes</string>
   <key>MinimumOSVersion</key>
   <string>12.0</string>
 </dict>
