--- a/notiva/pubspec.yaml
+++ b/notiva/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   record: ^5.2.0
-
+  permission_handler: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
