Worked for 9 days straight, rewrited design many times, functionality, added some providers and etc. It still bugged, have issues like 1. Login/Signup design 2. Home Page is too loaded 3. Focus on keyboard and cannot unfocus 4. Search functions need improvments 5. DraggableScrollable Sheets need adjustments 6. Share Page isn't have any working fuctionall 7. On server i recently got issue while creating new Note And many more. It's possible that i leaved some api keys in code in previous commits, but already changed then. It's not an MVP. Even close. It need improvements and adjustments. There is too much work for me now, espessialy when i got error while rendering app in ios simulator (i use old version of Xcode due to my MacOS version).
I have issue trying to make everything perfectly, but it takes an enormous amout of time esspasially when i lack knowlege.

I will continue creating this app as pet project, maybe sometime it would be complited.

In next commit i will solve some issues that i did not mention here, possibly solve some from list above and then will show company that gave me this task and tell truth that it took too long for me, i lack knowledge, and other companies propose me job so i didn't make any proggres on app within 1.5 month.

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=app
-spring.datasource.url=jdbc:postgresql://0.0.0.0:5432/NotivaDataBase
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/NotivaDataBase
 spring.datasource.username=user
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -7,7 +7,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 jwt.secret=bin36fusionthisissecretkeynotiva
-jwt.expiration=900000
+gemini.api.key=AIzaSyALCPuv0zwgWZ1w5rQNJq5iont7C0e6ODI
+jwt.expiration=5000
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=200MB
