--- a/notiva/ios/Runner/Info.plist
+++ b/notiva/ios/Runner/Info.plist
@@ -16,10 +16,6 @@
 	<string>notiva</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
-	<key>NSSpeechRecognitionUsageDescription</key>
-	<string>Need allowing for correct work</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>Need allowing for correct work</string>
 	<key>CFBundleShortVersionString</key>
 	<string>$(FLUTTER_BUILD_NAME)</string>
 	<key>CFBundleSignature</key>
@@ -49,5 +45,11 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app needs access to microphone for recording audio.</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>This app needs access to speech recognition to convert speech to text.</string>
+	<key>NSDocumentsFolderUsageDescription</key>
+	<string>Access to documents is needed for saving files.</string>
 </dict>
 </plist>
