--- a/notiva/macos/Runner/Info.plist
+++ b/notiva/macos/Runner/Info.plist
@@ -26,10 +26,13 @@
 	<string>Need allowing for correct work</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>This application needs to access your microphone for speech recognition</string>
-	<!-- <key>UIBackgroundModes</key>
-	<array>
-		<string>audio</string>
-	</array> -->
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>LSApplicationCategoryType</key>
+    <string>public.app-category.utilities</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>$(PRODUCT_COPYRIGHT)</string>
 	<key>NSMainNibFile</key>
