--- a/notiva/pubspec.yaml
+++ b/notiva/pubspec.yaml
@@ -31,19 +31,29 @@ dependencies:
   flutter:
     sdk: flutter
   record: ^5.2.0
-  permission_handler: any
-  http: any
-  shared_preferences: ^2.0.0
-  flutter_secure_storage: ^8.0.0
+  permission_handler: ^11.3.0 
+  http: ^1.2.0
+  flutter_secure_storage: ^9.2.4
   speech_to_text: ^7.0.0
   path_provider: ^2.1.5
   just_audio: ^0.9.42
   web_socket_channel: ^3.0.1
-
-
+  audio_session: ^0.1.23
+  audio_video_progress_bar: ^2.0.3
+  rxdart: '>=0.26.0 <0.29.0'
+  fuzzy: ^0.5.1
+  flutter_slidable: ^3.1.2
+  share_plus: ^10.1.4
+  file_picker: ^8.1.7
+  flutter_quill: ^9.6.0
+  provider: ^6.1.2
+  shared_preferences: ^2.3.3
+  flutter_audio_waveforms: ^1.2.1+8
+  siri_wave: '^2.0.0+1'
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
@@ -54,7 +64,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
